--- a/kollektions/templates/index.html
+++ b/kollektions/templates/index.html
@@ -30,6 +30,7 @@
       		<p>Build your personal book collection. Share with friends. Discover what your
       			friends have read.
       		</p>
+          <a class="btn" href="#">Start collecting and sharing your books</a>
       	</div>
       </div>
 
@@ -39,6 +40,7 @@
       	</div>
       	<div class="content">
       		<p>Share book collections for classes. Just add a class and invite your fellow students.</p>
+          <a class="btn" href="#">Create a class and add required readings</a>
       	</div>
       </div>
 
@@ -48,7 +50,7 @@
       	</div>
       	<div class="content">
       		<p>Put your collections online and let others discover your treasures.</p>
-
+          <a class="btn" href="#">Take a tour</a>
       	</div>
       </div>
 
