--- a/kollektions/templates/base.html
+++ b/kollektions/templates/base.html
@@ -54,6 +54,13 @@
         padding: 0;
     }
 
+
+    .formfield-error {
+        background: red;
+        padding: 0 8px 0 8px;
+        color: white;
+    }
+
     </style>
     {% block customhead %}        
     {% endblock %}
