--- a/kollektions/templates/login.html
+++ b/kollektions/templates/login.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+
+
 {% block customhead %}        
 <style type="text/css">
 .index-left {
@@ -12,34 +14,55 @@
 }
 
 </style>
+
+<script type="text/javascript">
+	$(document).ready(function() {
+		$("input#login").focus();
+	});
+</script>
 {% endblock %}
 
 
 {% block main %}
 
 <div class="row">
-
 	<div class="span12">
 		<div class="content index-left">
 			<h3>Login</h3>
 		</div>
-
 		<div class="content">
-			<form method=post>
-				<label>Username or E-Mail</label>
-				<input type="text" class="span3" placeholder="username">
+			<form class="form-vertical" method="POST" action="{{ url_for('login') }}">
+				{{ form.csrf }}
+				{{ form.login.label }}
+				
+				{% if form.login.errors %}
+					{% for error in form.login.errors %}
+						<span class="formfield-error">{{ error }}</span><br>
+					{% endfor %}
+					{{ form.login.error }}
+				{% endif %}
 
-				<label>Password</label>
-				<input type="password" class="span3" placeholder="password">
+				{{ form.login(size=20) }}
+
+				{{ form.password.label }}
+
+				{% if form.password.errors %}
+					{% for error in form.password.errors %}
+						<span class="formfield-error">{{ error }}</span><br>
+					{% endfor %}
+					{{ form.password.error }}
+				{% endif %}
+
+				{{ form.password(size=20) }}
+
 				<br>
 				<button type="submit" class="btn">Login</button>
+
 				<br><br>
 				<a href="#">Forgot your password?</a>
 			</form>
 		</div>
-
 	</div>
-
 </div>
 
 {% endblock %}
