--- a/kollektions/templates/base.html
+++ b/kollektions/templates/base.html
@@ -78,7 +78,7 @@
                         <span class="appname"><a href="/">Kollektions</a></span>
                         <span class="login-signup">
                             <span class="login"><a href="{{ url_for('login') }}">Login</a></span> or
-                            <span class="signup"><a href="#">Sign up</a></span>
+                            <span class="signup"><a href="{{ url_for('signup') }}">Sign up</a></span>
                         </span>
                         <div class="clear"></div>
                         {% endblock %}
