focus on signup

--- a/kollektions/templates/signup.html
+++ b/kollektions/templates/signup.html
@@ -3,7 +3,7 @@
 {% block customhead %}        
 <script type="text/javascript">
 	$(document).ready(function() {
-		$("input#login").focus();
+		$("input#email").focus();
 	});
 </script>
 {% endblock %}
