a bit of consolidation

--- a/kollektions/templates/base.html
+++ b/kollektions/templates/base.html
@@ -104,7 +104,7 @@
     <footer>
       <div class="container">
         <div class="content">
-            <p class="reset">2012 Kollektions | We love books and open data &#x2665; | Background photo by <a href="http://www.flickr.com/photos/laurenmanning/4286475665">Lauren Manning</a> &middot; <a href="http://creativecommons.org/licenses/by/2.0/deed.en">CC-BY</a></p>
+            <p class="reset">2012 kollektions | we &#x2665; books and open data | background photo by <a href="http://www.flickr.com/photos/laurenmanning/4286475665">Lauren Manning</a> &middot; <a href="http://creativecommons.org/licenses/by/2.0/deed.en">CC-BY</a></p>
         </div>
       </div>
     </footer>
