--- a/kollektions/templates/home.html
+++ b/kollektions/templates/home.html
@@ -5,12 +5,27 @@
 
 {% block main %}
 <div class="row">
-	<div class="span12">
+
+	<div class="span8">
 		<div class="content index-left">
-			<h3>Profile</h3>
+			<h3>Newsfeed</h3>
 		</div>
 		<div class="content">
-			<pre>{{ user }}</pre>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
+	</div>
+
+	<div class="span4">
+		<div class="content index-left">
+			<h3>{{ user.username|truncate(24, killwords=True) }}</h3>
+			<p>{{ user.email|truncate(30, killwords=True) }}</p>
+		</div>
+		<div class="content">
 		</div>
 	</div>
 </div>
