--- a/kollektions/templates/index.html
+++ b/kollektions/templates/index.html
@@ -20,7 +20,7 @@
 <div class="row">
       <div class="span4">
 		<div class="content index-left">
-      		<h3>For Worms and Lovers</h3>
+      		<h3>For Worms and Booklovers</h3>
       	</div>
 
       	<div class="content">
